<resources>
    <string name="app_name">Simple Cloud Notifier</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="ic_img_user_desc">Icon User</string>
    <string name="str_userid">User ID</string>
    <string name="str_userkey">Auth Key</string>
    <string name="str_quota">Quota</string>
    <string name="str_copy">Copy to clipboard</string>
    <string name="ic_img_key_desc">Icon Key</string>
    <string name="ic_img_fuel_desc">Icon Fuel</string>
    <string name="str_qr_code">QR Code</string>
    <string name="str_reset_account">Reset Account</string>
    <string name="no_notifications">No messages</string>
    <string name="str_not_connected">not connected</string>
    <string name="str_reload">reload</string>
    <string name="desc_priority_icon">Priority icon</string>
    <string name="str_common_settings">Common Settings</string>
    <string name="str_enabled">Enabled</string>
    <string name="str_localcachesize">Remember the last x messages locally</string>
    <string name="str_header_prio0">Notifications (priority 0 - Low)</string>
    <string name="str_header_prio1">Notifications (priority 1 - Normal)</string>
    <string name="str_header_prio2">Notifications (priority 2 - High)</string>
    <string name="str_msg_enablesound">Enable notification sound</string>
    <string name="str_notificationsound">Notification sound</string>
    <string name="str_repeatnotificationsound">Repeat notification sound</string>
    <string name="str_forcevolume">Automatically set the volume</string>
    <string name="str_enable_led">Enable notification light</string>
    <string name="str_ledcolor">Notification light color</string>
    <string name="str_enable_vibration">Enable notification vibration</string>
    <string name="str_upgrade_account">Upgrade account</string>
    <string name="str_deleteswipe">Delete messages by swiping left</string>
    <string name="str_previewlinecount">Number of visibile lines in collapsed messages</string>
    <string name="str_promode">Thank you for supporting the app and using the pro mode</string>
    <string name="str_promode_info">Increase your daily quota, remove the ad banner and support the developer (that\'s me)</string>
    <string name="volume_icon">Volume icon</string>
    <string name="play_test_sound">Play test sound</string>
    <string name="delete">DELETE</string>
    <string name="title_activity_query_log">QueryLogActivity</string>
    <string name="import_settings">Import settings</string>
    <string name="export_settings">Export settings</string>
</resources>
